<resources>
    <string name="app_name">XM_Assignement</string>
    <string name="welcome">Welcome</string>
    <string name="start_survey">Start survey</string>
    <string name="survey_header">Question %1$d/%2$d</string>
    <string name="survey_question_submitted">Questions submitted: %1$d</string>
    <string name="survey_previous">Previous</string>
    <string name="survey_next">Next</string>
    <string name="survey_answer_hint">Type here for an answer...</string>
    <string name="survey_submit">Submit</string>
    <string name="survey_submit_success">Success</string>
    <string name="survey_submit_fail">Failure!</string>
    <string name="survey_submit_retry">Retry</string>
    <string name="survey_submitted">Already submitted</string>
</resources>