<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".feature.survey.ui.SurveyActivity">

    <ProgressBar
        android:id="@+id/survey_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_question_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/survey_header"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/survey_previous"
            android:textColor="@drawable/btn_state"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/survey_next"
            android:textColor="@drawable/btn_state"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:padding="48dp"
        android:text="@string/survey_submit_success"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/ct_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/red"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="48dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/survey_submit_fail"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/survey_submit_retry"
            android:textSize="40sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_questions_submitted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Questions submitted: 2" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:text="Question here" />

    <EditText
        android:id="@+id/et_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/survey_answer_hint"
        android:padding="8dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:text="@string/survey_submit"
        android:enabled="false"
        android:textSize="24sp" />

</LinearLayout>